defect(css): fix css for alignment

--- a/hosting/src/design/layout-site/layout-site.component.scss
+++ b/hosting/src/design/layout-site/layout-site.component.scss
@@ -18,7 +18,8 @@
 
     &__content {
         display: grid;
-        grid-template-areas: "brand brand" "values mascot";
+        grid-template-areas: "brand brand"
+                             "values mascot";
         grid-template-columns: 1fr auto;
         color: $brand-background-lighter;
         padding: 0.2em 1rem 0.4em;
@@ -53,7 +54,8 @@
         }
 
         @media all and (min-width: $viewport-mobile-min) {
-            grid-template-areas: "brand mascot" "values mascot";
+            grid-template-areas: "brand mascot"
+                                 "values mascot";
             grid-template-rows: auto 1fr;
 
             &__brand {
@@ -63,27 +65,6 @@
             &__mascot {
                 max-height: inherit;
             }
-        }
-    }
-
-    &__mascot {
-        grid-area: mascot;
-        max-height: 140px;
-
-        img {
-            max-height: 100%;
-        }
-    }
-
-    @media all and (min-width: $viewport-mobile-min) {
-        grid-template-areas: "brand mascot" "values mascot";
-
-        &__brand {
-            text-align: inherit;
-        }
-
-        &__mascot {
-            max-height: inherit;
         }
     }
 }
